--- a/teca/package.json
+++ b/teca/package.json
@@ -28,7 +28,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "9.0.0",
+    "downloadjs": "^1.4.7",
     "firebase": "^8.2.5",
+    "html-to-image": "^1.9.0",
     "natives": "^1.1.6",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~6.5.5",
