--- a/teca/.firebaserc
+++ b/teca/.firebaserc
@@ -1,7 +1,5 @@
 {
   "projects": {
-    "default": "teca-e566a",
-    "teca": "teca-e566a"
-  },
-  "targets": {}
+    "default": "teca-ef737"
+  }
 }
